# trump-tyranny-tracker

./: .gitignore  README.md  pyproject.toml  scrape_all.py
.github/workflows/: deploy.yml
.web/data/: stories.csv
entities/: __init__.py  extract_entities.py
export/: __init__.py  make_entities_json.py  make_stories_csv.py  view_to_csv.py
prepare/: make_stories_csv.py
scrape/: __init__.py  archive_scraper.py  csv_writer.py  enrich.py  fix_item_section_type.py  import_to_duckdb.py  list_posts.py  migrate_add_item_section.py  post_scraper.py
sql/: queries.sql  updates.sql  views.sql
web/: index.html
web/css/: layout.css  style.css  world-layout.css  world-style.css
web/data/: entities.json
web/js/: fileUtil.js  rowChart.js  shared.js  trumpTyrannyTracker.js
