[project]
name = "trump-tyranny-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "duckdb>=1.4.2",
    "lxml>=6.0.2",
    "lxml-html-clean>=0.4.3",
    "newspaper3k>=0.2.8",
    "pandas>=2.3.3",
    "playwright>=1.56.0",
    "requests>=2.32.5",
    "spacy>=3.8.0",
]
